avoid warning of jdk9